Update requirements and .gitignore; add new project files

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,10 @@ cython_debug/
 
 # VS Code settings
 .vscode/
+
+# Unfinished modular structure
+/callbacks
+/components
+/data
+/utils
+config.py
