Replaced Excel and Shape files with pre-processed .pkl and .parquet files, respectively. Attempted to improve performance with pre-aggregation and multi-indexing instead of multiple groupby operations

--- a/.gitignore
+++ b/.gitignore
@@ -142,16 +142,14 @@ cython_debug/
 .vscode/
 
 # Unfinished modular structure
-/callbacks
-/components
-/data
-/utils
-config.py
+
+assets/dashExtensions_default.js
 
 # data
 /hidden
-data_wrangle.ipynb
-app2.py
-
-# Assets
 /assets
+app2.py
+app_working.py
+app_working_backup.py
+data_wrangle.ipynb
+config.py
