--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 dash==2.18.2
 dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 pandas==2.2.3
 geopandas==1.0.1
 dash-leaflet==1.0.15
 colorlover==0.3.0
 dash-extensions==1.0.19
 plotly==5.24.1
-numpy==2.1.3
+numpy==2.2.0
 diskcache==5.6.3
 pyarrow==18.1.0
+gunicorn==23.0.0
+shapely==2.0.6
+fiona==1.10.1
+pyproj==3.7.0
+orjson==3.10.12
+werkzeug==3.0.6
+flask==3.0.3
